--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,6 @@
       </activity>
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyB3vRhguRoZhMRLNLuVFINwZXcQaukhAmk"/>
+                android:value="api key goes here"/>
     </application>
 </manifest>
